--- a/_posts/2021-06-26-bank_CASA.md
+++ b/_posts/2021-06-26-bank_CASA.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: CASA
-categories: [Finance, Bank]
+categories: [Fin, Bank]
 ---
 
 CASA is a ratio of savings/current account deposits to total deposits. 
