--- a/_posts/2021-11-30-MS-Excel_1.md
+++ b/_posts/2021-11-30-MS-Excel_1.md
@@ -24,9 +24,9 @@ Similarly, a continuous cell block can be referenced by specifying the cell-id o
 <img src="{{site.baseurl}}/assets/img/2021-11-30-MS-Excel_1_cell_selection.png" />
 
 So far we have used variable referencing which means that, if we simply copy paste the formula somewhere else, excel will study the pattern where it is placed and it will change the input data to the formula. 
-To use absolute referencing, place a *$* before the row-id and column-id of the cells. Example, \$A$1.  Now wherever we copy our formula, this cell referencing will be fixed.
+To use absolute referencing, place a *$* before the row-id and column-id of the cells. Example, \$A\$1.  Now wherever we copy our formula, this cell referencing will be fixed.
 
-We can even use mixed referencing where we permit excel to change only one of the two, either row or column. Example, \$A1, C$5.
+We can even use mixed referencing where we permit excel to change only one of the two, either row or column. Example, \$A1, C\$5.
 
 `F4` is a useful shortcut to toggle between the type of cell referencing keeping the cell selected.
 
