--- a/_posts/2021-11-30-MS-Excel_1.md
+++ b/_posts/2021-11-30-MS-Excel_1.md
@@ -9,7 +9,7 @@ MS Excel is a very powerful tool which can simplify the process of data analysis
 
 **Cell referencing**
 
-A single file of excel is like a workbook with many *sheets* . Each sheet is divided into grids which can be identified by column-id (alphabet) and row-id(number). Example: A22, G4, etc. 
+A single file of excel is like a workbook with many *sheets* . Each sheet is divided into grids which can be identified by column-id (alphabet) and row-id(number). Example: `A22`, `G4`, etc. 
 
 *Note: First column, then row.* 
 
@@ -19,14 +19,14 @@ A cell in an excel file can be referenced from any sheet within the file as foll
 
 If one is referencing the cell within the same sheet then the <sheet_name>  may not be provided.
 
-Similarly, a continuous cell block can be referenced by specifying the cell-id of the top-left corner cell of the block and the bottom-right corner cell of the block, separated by a colon *(:)*. Example: B3:C7
+Similarly, a continuous cell block can be referenced by specifying the cell-id of the top-left corner cell of the block and the bottom-right corner cell of the block, separated by a colon *(:)*. Example: `B3:C7`
 
 <img src="{{site.baseurl}}/assets/img/2021-11-30-MS-Excel_1_cell_selection.png" />
 
 So far we have used variable referencing which means that, if we simply copy paste the formula somewhere else, excel will study the pattern where it is placed and it will change the input data to the formula. 
-To use absolute referencing, place a *$* before the row-id and column-id of the cells. Example, '\$A\$1'.  Now wherever we copy our formula, this cell referencing will be fixed.
+To use absolute referencing, place a *$* before the row-id and column-id of the cells. Example, `$A$1`.  Now wherever we copy our formula, this cell referencing will be fixed.
 
-We can even use mixed referencing where we permit excel to change only one of the two, either row or column. Example, '\$A1', 'C\$5'.
+We can even use mixed referencing where we permit excel to change only one of the two, either row or column. Example,  `$A1`, `C$5`.
 
 `F4` is a useful shortcut to toggle between the type of cell referencing keeping the cell selected.
 
