--- a/_posts/2021-11-30-MS-Excel_1.md
+++ b/_posts/2021-11-30-MS-Excel_1.md
@@ -44,5 +44,5 @@ We can even use mixed referencing where we permit excel to change only one of th
 
 **Formulas**
 
-Useful formulas and their usage can be found in the <a href="{}{site.baseurl}}/assets/files/2021-11-30-MS-Excel_1_excel_formula_list">this</a> file.
+Useful formulas and their usage can be found in the <a href="{}{site.baseurl}}/assets/files/2021-11-30-MS-Excel_1_excel_formula_list.odt">this</a> file.
 
