--- a/_posts/2021-12-13-MS-Excel_2.md
+++ b/_posts/2021-12-13-MS-Excel_2.md
@@ -294,6 +294,17 @@ Next xIterator
 'Result: 0,1,2,3
 ```
 
+**While Wend**
+
+```vb
+i = 0
+'Will display 0,1,2,3,4,5,6,7,8,9,10,11
+While i < 12
+   MsgBox i
+   i = i + 1
+Wend
+```
+
 **Do While**
 
 ```vb
