--- a/_posts/2021-11-30-MS-Excel_1.md
+++ b/_posts/2021-11-30-MS-Excel_1.md
@@ -70,12 +70,19 @@ Format Control [if we want the checkbox to be tick or untick dependend on the bo
 	VLOOKUP will return false if the search value is not found in the first column of the selected data. 
 
 **For searching from backwards or any arbitrary column, use a combination of the below two:**
-INDEX
-MATCH
+1. INDEX
+2. MATCH
+
 INDEX(A3:B7, MATCH(D7, B3:B7, 0), 1)
 
-CHOOSE
-VLOOKUP(E3, CHOOSE({1,2}, C3:C7, A3:A7), 2, false)
+OR,
+
+1. VLOOKUP
+2. CHOOSE
+
+VLOOKUP(E3, CHOOSE({1,2}, A3:A7, C3:C7), 2, false)
+
+Here instead of choosing the entire data range, we select the two relevant columns (column where to look for match, and the column from which we will pick value). 
 
 **To substitute a text with another one:**
 SUBSTITUTE(A15, "t", "j")           # Replace all 't' in the entry of cell A15 with 'j'
